# bakery

./: .gitignore  .gitmodules  Cargo.toml  Makefile  NOTICE  README.md
.github/workflows/: buildntest.yml  docker.yml  release.yml
configs/: boss.json
docker/: Dockerfile  create_docker_user.sh  do_docker_build.sh  do_docker_run.sh  do_docker_shell.sh  lib_docker.sh
documentation/: build-bakery.md  build-config.md  docker.md  meta-layers.md  shell.md  starship.md  sub-commands.md  workspace-config.md
scripts/: bakery.bashrc  bkry-starship.toml  bkry.bashrc  do_build_release.sh  do_deb_package.sh  do_inc_version.sh  do_install_bakery.sh  do_install_yaab.sh  do_release.sh  lib.sh  profile-bakery.sh  setup-docker.sh  setup-rust.sh  yaab.bashrc
src/: main.rs
src/cli/: bakery.rs  cli.rs  logger.rs  mod.rs  system.rs  yaab.rs
src/collector/: archive.rs  condition.rs  conditional.rs  directory.rs  factory.rs  file.rs  link.rs  manifest.rs  mod.rs
src/commands/: build.rs  clean.rs  deploy.rs  executer.rs  handler.rs  list.rs  mod.rs  setup.rs  shell.rs  sync.rs  tests.rs  upload.rs
src/configs/: artifact.rs  bitbake.rs  build.rs  config.rs  context.rs  handler.rs  json.rs  mod.rs  settings.rs  task.rs
src/data/: artifact.rs  bitbake.rs  config.rs  context.rs  customsubcmd.rs  data.rs  deploy.rs  include.rs  mod.rs  product.rs  subcmd.rs  task.rs  taskcmd.rs  upload.rs
src/docker/: docker.rs  mod.rs  tests.rs
src/error/: mod.rs
src/executers/: bitbake.rs  customsubcmd.rs  deploy.rs  docker.rs  executer.rs  factory.rs  hlos.rs  mod.rs  nonbitbake.rs  (+6 more)
(+24 files in other folders)
