[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
indexmap = "2.0.0"
mockall = "0.11.4"
regex = "1.9.5"
regexp = "0.3.2"
serde = "1.0.188"
serde_json = "1.0.105"
tempdir = "0.3.7"

