[package]
name = "thebakery"
version = "1.1.1"
description = "Build engine for the Yocto/OE Projects"
catagories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["cli", "yocto", "openembedded", "build", "docker"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Mikrodidakt/bakery"
license = "Apache-2.0"
license-file = "LICENSE"
exclude = ["docker/", "scripts/", "Makefile", "tests/", ".*"]

[[bin]]
name = "bakery"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bzip2 = "0.4.4"
chrono = "0.4.38"
clap = "4.4.2"
flate2 = "1.0.27"
glob = "0.3.1"
indexmap = "2.0.0"
mockall = "0.11.4"
os_pipe = "1.1.4"
rand = "0.8.5"
regex = "1.9.5"
regexp = "0.3.2"
serde = "1.0.188"
serde_json = "1.0.105"
subprocess = "0.2.9"
tar = "0.4.40"
tempdir = "0.3.7"
thiserror = "1.0.49"
users = "0.11.0"
zip = "0.6.6"

